[gd_scene load_steps=19 format=3 uid="uid://cxrn7l2wlwqut"]

[ext_resource type="Script" uid="uid://dtallk0xtca5a" path="res://menus/main_menu.gd" id="1_1edw4"]
[ext_resource type="Texture2D" uid="uid://cpo7mcmhr44gb" path="res://assets/art/UI/Post.png" id="1_rmbjf"]
[ext_resource type="Texture2D" uid="uid://eeqvr3l1a5gf" path="res://assets/art/UI/Logo_Base.png" id="2_b7rmo"]
[ext_resource type="PackedScene" uid="uid://bm3x501r3my1h" path="res://menus/web_quit_screen.tscn" id="2_ysfef"]
[ext_resource type="Texture2D" uid="uid://blj4ev7loljiv" path="res://assets/art/UI/Menu_Buttons/Start1.png" id="3_3a5co"]
[ext_resource type="Texture2D" uid="uid://cw8oov3pwp0w1" path="res://assets/art/UI/Menu_Buttons/Start3.png" id="4_ysyx0"]
[ext_resource type="Texture2D" uid="uid://7q0jqmeul2b0" path="res://assets/art/UI/Menu_Buttons/Start2.png" id="5_q855l"]
[ext_resource type="Texture2D" uid="uid://t5y3o0rn2dhp" path="res://assets/art/UI/Menu_Buttons/Options1.png" id="6_53v7h"]
[ext_resource type="PackedScene" uid="uid://d4h3brjh8eoak" path="res://menus/options_menu.tscn" id="6_xvotp"]
[ext_resource type="Texture2D" uid="uid://hr13wo427e1y" path="res://assets/art/UI/Menu_Buttons/Options3.png" id="7_s36xt"]
[ext_resource type="Texture2D" uid="uid://rjppdir64yhi" path="res://assets/art/UI/Menu_Buttons/Options2.png" id="8_43bnc"]
[ext_resource type="Texture2D" uid="uid://cbgcp7w42uay8" path="res://assets/art/UI/Menu_Buttons/Credits1.png" id="9_w5jp5"]
[ext_resource type="Texture2D" uid="uid://bhghh3kokhbiy" path="res://assets/art/UI/Menu_Buttons/Credits3.png" id="10_pj5sj"]
[ext_resource type="Texture2D" uid="uid://dwysc1sr04vyf" path="res://assets/art/UI/Menu_Buttons/Credits2.png" id="11_ab5mb"]
[ext_resource type="Texture2D" uid="uid://btiwtiljsnxq2" path="res://assets/art/UI/Menu_Buttons/Quit_Button1.png" id="14_8xuee"]
[ext_resource type="Texture2D" uid="uid://diypjletpqjj" path="res://assets/art/UI/Menu_Buttons/Quit_Button3.png" id="15_u6qb4"]
[ext_resource type="Texture2D" uid="uid://cywy3ynqrr0o4" path="res://assets/art/UI/Menu_Buttons/Quit_Button2.png" id="16_tvv58"]
[ext_resource type="PackedScene" uid="uid://rowd5l4byabr" path="res://menus/credits.tscn" id="17_ysyx0"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_1edw4")
web_quit_screen = ExtResource("2_ysfef")

[node name="ControlRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ControlRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.01972604, 0.019717343, 0.09739449, 0.3647059)

[node name="Post" type="TextureRect" parent="ControlRoot"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -219.0
offset_top = -349.0
offset_right = 37.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("1_rmbjf")

[node name="VBoxContainer" type="VBoxContainer" parent="ControlRoot/Post"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -169.23
offset_right = 124.000046
offset_bottom = 232.76999
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0837758
scale = Vector2(0.72, 0.72)
pivot_offset = Vector2(126.295, 209.9)
theme_override_constants/separation = 3
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="TextureButton" parent="ControlRoot/Post/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("3_3a5co")
texture_pressed = ExtResource("4_ysyx0")
texture_hover = ExtResource("5_q855l")

[node name="OptionsButton" type="TextureButton" parent="ControlRoot/Post/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("6_53v7h")
texture_pressed = ExtResource("7_s36xt")
texture_hover = ExtResource("8_43bnc")

[node name="CreditsButton" type="TextureButton" parent="ControlRoot/Post/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("9_w5jp5")
texture_pressed = ExtResource("10_pj5sj")
texture_hover = ExtResource("11_ab5mb")

[node name="Post2" type="TextureRect" parent="ControlRoot"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -24.000008
offset_top = -130.99998
offset_right = 232.0
offset_bottom = 220.0
grow_vertical = 0
scale = Vector2(0.65, 0.65)
texture = ExtResource("1_rmbjf")

[node name="VBoxContainer" type="VBoxContainer" parent="ControlRoot/Post2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.03
offset_top = -149.79001
offset_right = 153.97018
offset_bottom = -17.790009
grow_horizontal = 2
grow_vertical = 2
rotation = -0.13962634
scale = Vector2(0.72, 0.72)
pivot_offset = Vector2(126.295, 209.9)
theme_override_constants/separation = 3
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="TextureButton" parent="ControlRoot/Post2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("14_8xuee")
texture_pressed = ExtResource("15_u6qb4")
texture_hover = ExtResource("16_tvv58")

[node name="LogoTexture" type="TextureRect" parent="ControlRoot"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -195.5
offset_right = 195.5
offset_bottom = 149.0
grow_horizontal = 2
texture = ExtResource("2_b7rmo")

[node name="Options" parent="ControlRoot" instance=ExtResource("6_xvotp")]
visible = false
layout_mode = 1

[node name="Credits" parent="ControlRoot" instance=ExtResource("17_ysyx0")]
visible = false
layout_mode = 1
